--- a/.github/workflows/secure-patching.yml
+++ b/.github/workflows/secure-patching.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           host: 12.10.10.4
           username: nir777ert777
-          key: ${{ secrets.SSHPRIVATEKEY }}       # SSH Private key stored in GitHub secrets
+          key: ${{ secrets.SSH_PRIVATE_KEY }}       # SSH Private key stored in GitHub secrets
           script: |
             set -e  # Exit immediately if any command fails
             # Update package lists and upgrade installed packages
