--- a/.github/workflows/secure-patching.yml
+++ b/.github/workflows/secure-patching.yml
@@ -13,6 +13,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Setup SSH Key
+        run: |
+          eval $(ssh-agent -s)
+          ssh-add - <<< "${{ secrets.SSHPRIVATEKEY }}"
+          mkdir -p ~/.ssh
+          ssh-keyscan -H 12.10.10.4 >> ~/.ssh/known_hosts
+
+      - name: Debug SSH connection
+        run: ssh -v nir777ert777@12.10.10.4 echo "SSH connection test"
+  
       - name: Debug SSH connection
         run: |
           ssh -vvv -o StrictHostKeyChecking=no nir777ert777@12.10.10.4 echo "SSH connection test"
