--- a/.github/workflows/secure-patching.yml
+++ b/.github/workflows/secure-patching.yml
@@ -1,3 +1,4 @@
+
 name: Secure Patching
 
 on:
@@ -18,18 +19,15 @@ jobs:
         with:
           host: 12.10.10.4
           username: nir777ert777
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          key: ${{ secrets.SSHPRIVATEKEY }}       # SSH Private key stored in GitHub secrets
           script: |
             set -e  # Exit immediately if any command fails
-            echo "Connected successfully"
             # Update package lists and upgrade installed packages
             sudo apt update && sudo apt upgrade -y
             # Sign the kernel modules
             sudo python3 /opt/secureboot/scripts/sign-kernel-modules.py
             # Check Secure Boot state
             mokutil --sb-state
-
       - name: Print Result
         run: |
           echo "Patching and signing completed (or failed)."
-
