--- a/.github/workflows/secure-patching.yml
+++ b/.github/workflows/secure-patching.yml
@@ -1,4 +1,3 @@
-
 name: Secure Patching
 
 on:
@@ -15,19 +14,19 @@ jobs:
         uses: actions/checkout@v3
 
       - name: SSH and Patch
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: 12.10.10.4
-          username: nir777ert777
-          key: ${{ secrets.SSH_PRIVATE_KEY }}       # SSH Private key stored in GitHub secrets
-          script: |
+        env:
+          SUDO_ASKPASS: /github/workspace/askpass.sh
+        run: |
+          #!/bin/bash
+          echo "${{ secrets.TARGET_MACHINE_PASSWORD }}" | sudo -S bash -c '
             set -e  # Exit immediately if any command fails
             # Update package lists and upgrade installed packages
-            sudo apt update && sudo apt upgrade -y
+            apt update && apt upgrade -y
             # Sign the kernel modules
-            sudo python3 /opt/secureboot/scripts/sign-kernel-modules.py
+            python3 /opt/secureboot/scripts/sign-kernel-modules.py
             # Check Secure Boot state
             mokutil --sb-state
+          '
       - name: Print Result
         run: |
           echo "Patching and signing completed (or failed)."
