--- a/.github/workflows/secure-patching.yml
+++ b/.github/workflows/secure-patching.yml
@@ -14,19 +14,19 @@ jobs:
         uses: actions/checkout@v3
 
       - name: SSH and Patch
-        env:
-          SUDO_ASKPASS: /github/workspace/askpass.sh
-        run: |
-          #!/bin/bash
-          echo "${{ secrets.TARGET_MACHINE_PASSWORD }}" | sudo -S bash -c '
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: 12.10.10.4
+          username: nir777ert777
+          key: ${{ secrets.SSHPRIVATEKEY }}       # SSH Private key stored in GitHub secrets
+          script: |
             set -e  # Exit immediately if any command fails
             # Update package lists and upgrade installed packages
-            apt update && apt upgrade -y
+            sudo apt update && sudo apt upgrade -y
             # Sign the kernel modules
-            python3 /opt/secureboot/scripts/sign-kernel-modules.py
+            sudo python3 /opt/secureboot/scripts/sign-kernel-modules.py
             # Check Secure Boot state
             mokutil --sb-state
-          '
       - name: Print Result
         run: |
           echo "Patching and signing completed (or failed)."
